# rust-gelf_logger

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
examples/: ovh-ldp.rs  simple.rs
src/: batch.rs  buffer.rs  builder.rs  config.rs  error.rs  formatter.rs  level.rs  lib.rs  logger.rs  macros.rs  output.rs  record.rs  result.rs
