[package]
name = "gelf_logger"
version = "0.1.2"
authors = ["OVH SAS <github@ovh.net>"]
license = "BSD-3-Clause"
license-file = "LICENSE"
description = "Minimal rust logger to send log entries in GELF."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-gelf_logger"

[features]
ovh-ldp = ["serde_gelf/ovh-ldp"]

[dependencies]
log = { version = "0.4", features = ["std"] }
native-tls = "0.2"
serde = "1.0"
serde-value = "0.5"
serde_derive = "1.0"
serde_gelf = "0.1"
serde_json = "1.0"
serde_yaml = "0.8"
