[package]
name = "gelf_logger"
version = "0.2.0"
edition = "2021"
authors = ["OVH SAS <github@ovh.net>"]
license-file = "LICENSE"
description = "Minimal rust logger to send log entries in GELF."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-gelf_logger"

[features]
ovh-ldp = ["serde_gelf/ovh-ldp"]
yaml = ["dep:serde_yaml"]

[dependencies]
log = { version = "0.4", features = ["std"] }
native-tls = "0.2"
serde = "1.0"
serde-value = "0.6"
serde-value-utils  = "0.1"
serde_derive = "1.0"
serde_gelf = "0.1"
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true