[package]
name = "gelf_logger"
version = "0.3.0"
edition = "2021"
authors = ["OVH SAS <github@ovh.net>"]
license-file = "LICENSE"
description = "Minimal rust logger to send log entries in GELF."
keywords = ["serde", "logs", "GELF"]
readme = "README.md"
repository = "https://github.com/ovh/rust-gelf_logger"

[features]
default = []
ovh-ldp = []

[dependencies]
env_filter = "0.1.0"
hostname = "0.4.0"
log = { version = "0.4.21", features = ["kv_serde", "std"] }
native-tls = "0.2.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true